--- a/EseDataAccess/EseDataAccess.vcxproj
+++ b/EseDataAccess/EseDataAccess.vcxproj
@@ -66,6 +66,7 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat />
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <ProjectReference>
       <LinkLibraryDependencies>false</LinkLibraryDependencies>
