--- a/VssCopy/VssCopy.vcxproj
+++ b/VssCopy/VssCopy.vcxproj
@@ -70,6 +70,7 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat />
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Lib>
       <AdditionalDependencies>vssapi.lib;vss_uuid.lib;%(AdditionalDependencies)</AdditionalDependencies>
