--- a/ditsnap_exe/ditsnap.rc
+++ b/ditsnap_exe/ditsnap.rc
@@ -44,11 +44,11 @@ BEGIN
     LTEXT           "Destination Path:",IDC_STATIC,10,85,51,8
     EDITTEXT        IDC_SOURCE_EDIT,63,60,189,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_DEST_EDIT,63,83,189,14,ES_AUTOHSCROLL
-    LTEXT           "The Snapshot Copy Wizard creates a copy of ntds.dit even if the file is opened in exclusive mode. The Volume Shadow Copy Service (VSS) captures and copies a stable image.",IDC_STATIC,30,12,215,28
-    LTEXT           "If you click next bottun, the following steps will be executed: \n\n  1. The VSS creates a copy of the source DB file. \n  2. The copy is repaired by Esentutl /p command. ",IDC_STATIC,30,106,215,39
+    LTEXT           "The Snapshot Copy Wizard creates a copy of ntds.dit by VSS.",IDC_STATIC,23,24,215,15
+    LTEXT           "When you click the next bottun, the following steps will be executed: \n\n  1. The VSS creates a copy of ntds.dit. \n  2. The copy will be repaired by Esentutl /p command. ",IDC_STATIC,30,106,215,39
 END
 
-IDD_SCWIZARD2 DIALOGEX 0, 0, 210, 154
+IDD_SCWIZARD2 DIALOGEX 0, 0, 219, 106
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Snapshot Copy Wizard"
 FONT 9, "MS UI Gothic", 0, 0, 0x0
@@ -112,6 +112,11 @@ BEGIN
     BEGIN
         RIGHTMARGIN, 275
         BOTTOMMARGIN, 154
+    END
+
+    IDD_SCWIZARD2, DIALOG
+    BEGIN
+        RIGHTMARGIN, 210
     END
 
     IDD_SCWIZARD_REPAIR, DIALOG
