--- a/ditsnap_exe/ditsnap_exe.vcxproj
+++ b/ditsnap_exe/ditsnap_exe.vcxproj
@@ -106,9 +106,8 @@
     <ClCompile Include="MainFrame.cpp" />
     <ClCompile Include="SnapshotWizard.cpp" />
     <ClCompile Include="stdafx.cpp" />
-    <ClCompile Include="TableController.cpp" />
     <ClCompile Include="TableListView.cpp" />
-    <ClCompile Include="TableModel.cpp" />
+    <ClCompile Include="EseDbManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h" />
@@ -120,9 +119,8 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="SnapshotWizard.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="TableController.h" />
     <ClInclude Include="TableListView.h" />
-    <ClInclude Include="TableModel.h" />
+    <ClInclude Include="EseDbManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\..\databaseAndTable.bmp" />
